--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,8 @@ body {
     font-size: 18px;
     text-decoration-line: underline;
     border-right: 1px solid #516FA6;
-    padding: 0 10px 0 5px;
+    margin-right: 10px;
+    padding-right: 10px;
 }
 
 .menu-item:last-child {
@@ -959,7 +960,6 @@ body {
     background: rgba(81, 111, 166, 0.29);
     max-width: 381px;
     width: 100%;
-    height: 46px;
     margin: 5px 0 8px;
     font-weight: 500;
     padding: 10px;
@@ -979,7 +979,6 @@ body {
     background: rgba(81, 111, 166, 0.29);
     max-width: 381px;
     width: 100%;
-    height: 46px;
     margin: 5px 0 8px;
     font-weight: 500;
 }
@@ -996,20 +995,19 @@ body {
     padding: 0 10px;
 }
 
+.dropbtn>span {
+    padding: 10px 0;
+}
+
 .dropbtn img {
     transition: all 0.3s ease-in-out 0s;
 }
-
-.dropbtn:hover, .dropbtn:focus {
-    background-color: #28354d49;
-    border-radius: 4px;
-}
-
 
 .dropdown-clinic {
     position: relative;
     display: inline-block;
     width: 100%;
+    padding: 5px 0;
 }
 
 .reverse-arrow img {
@@ -2918,7 +2916,7 @@ body {
     text-decoration-line: none;
 }
 
-.doctor-card__geo-disabled img {
+.doctor-card__phone-clinic img {
     padding-left: 10px;
 }
 
@@ -3108,6 +3106,14 @@ body {
     padding-right: 20px;
     border-right: 1px solid #00000019;
     height: 100%;
+    overflow: auto;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+ul.list::-webkit-scrollbar {
+    width: 0;
+    height: 0;
 }
 
 .appointment-date {
@@ -3455,6 +3461,7 @@ body {
    display: flex;
     flex-direction: column;
     padding-bottom: 15px;
+    margin-right: 40px;
 }
 
 .information__tab {
@@ -4318,12 +4325,6 @@ body {
     opacity: 1!important;
 }
 
-
-.show-more-time {
-    width: 65px;
-    opacity: 0.5;
-}
-
 .radio__label {
     margin: 6px;
     border-radius: 6px;
@@ -4366,6 +4367,11 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.show-more-time {
+    opacity: 0.5;
+    padding: 5px 22px;
 }
 
 .doctor-card__listing {
