--- a/css/mobile-styles.css
+++ b/css/mobile-styles.css
@@ -114,6 +114,26 @@ html.no-scroll body {
     box-shadow: 1px 10px 20px 0px rgba(0, 0, 0, 0.25);
 }
 
+.close-map {
+    display: none;
+}
+
+.block-page {
+    display: block;
+}
+
+.close-clinic-map {
+    display: none;
+}
+
+.open-clinic-map {
+    box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.25);
+    position: fixed;
+    top: 100px;
+    z-index: 10;
+    left: 10px;
+}
+
 .content-raltive {
     position: relative;
     top: 75px;
@@ -1005,8 +1025,9 @@ html.no-scroll body {
     flex-wrap: wrap;
     align-content: center;
     align-items: flex-start;
-    padding: 0 10px 15px 10px;
+    padding: 0 10px 15px 15px;
 }
+
 
 .clinic-card__footer {
     display: flex;
@@ -1204,6 +1225,7 @@ html.no-scroll body {
 
 .clinic-card__metro {
     margin: 0 8px 15px;
+    padding: 0 15px;
 }
 
 .clinic-card__metro-near {
@@ -1517,6 +1539,7 @@ html.no-scroll body {
     max-width: 350px;
     width: 100%;
     margin-top: 15px;
+    cursor: pointer;
 }
 
 .bot-menu-visible .bot-menu {
@@ -1717,7 +1740,8 @@ html.no-scroll body {
 }
 
 .license-container img {
-    width: 106px;
+    max-width: 106px;
+    width:100%;
     height: 156px;
 }
 
@@ -1805,7 +1829,7 @@ html.no-scroll body {
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin: 10px 0;
+    margin: 10px 20px;
 }
 
 .width-timeslot {
@@ -1993,9 +2017,9 @@ html.no-scroll body {
 
 }
 
-.users__wrapper {
+/*.users__wrapper {
     padding: 0 15px;
-}
+}*/
 
 .user__info-top-right {
     display: flex;
@@ -3060,6 +3084,9 @@ html.no-scroll body {
 
 .doctor-card__time {
     display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    flex-wrap: wrap;
 }
 
 .radio__label {
@@ -3102,12 +3129,6 @@ html.no-scroll body {
     width: 20px;
 }
 
-.doctor-card__time {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-
 .schedule__item img {
     width: 20px;
     transition: all 0.3s ease-in-out 0s;
@@ -3122,6 +3143,7 @@ html.no-scroll body {
 .active-time {
     opacity: 1!important;
 }
+
 
 
 .show-more-time {
@@ -3368,6 +3390,8 @@ html.no-scroll body {
     font-size: 14px;
     font-weight: 600;
     text-align: center;
+    width: 100%;
+    margin-bottom: 30px;
 }
 
 .information__card-date {
@@ -3549,6 +3573,11 @@ html.no-scroll body {
 .clinic-drop-down-container {
     border-radius: 13px;
     background: #FFF;
+    margin: 40px 0 25px;
+}
+
+.clinic-map {
+    padding: 0 20px;
 }
 
 .popular-doctor__doctor-card-district {
@@ -3573,17 +3602,17 @@ html.no-scroll body {
 }
 
 .price-doctor-clinic__container {
-    margin: 15px 10px;
+    margin: 15px 0;
     border-bottom: 1px solid #00000019;
 }
 
 .price-doctor-clinic__container:last-child {
-    margin: 15px 10px;
+    margin: 15px 0;
     border-bottom: none;
 }
 
 .clinic-drop-down {
-    padding: 0 10px;
+    /*padding: 0 10px;*/
     height: 0;
     overflow: hidden;
     will-change: height;
@@ -3632,6 +3661,7 @@ html.no-scroll body {
     color: rgba(0, 0, 0, 0.60);
     font-size: 14px;
     text-decoration-line: underline;
+    width: 100%;
 }
 
 .price-doctor__item {
@@ -3649,7 +3679,7 @@ html.no-scroll body {
 .price-doctor-clinic__body ul {
     list-style-type: none;
     margin: 10px 0;
-    padding: 15px 8px;
+    padding: 15px 20px;
 }
 
 .name-record, .phone-record {
@@ -4102,7 +4132,7 @@ html.no-scroll body {
     height: 100%;
     background: #000;
     opacity: 0.7;
-    z-index: 100;
+    z-index: 200;
 }
 
 .show-review-form .overlay {
