--- a/css/styles.css
+++ b/css/styles.css
@@ -1092,7 +1092,9 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    max-height: 100px;
+    max-width: 350px;
+    width: 100%;
+    max-height: 110px;
     padding: 10px;
     margin-left: 20px;
 }
@@ -1106,6 +1108,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    width: 100%;
 }
 
 .clinic-card__body-left {
@@ -2501,6 +2504,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 480px;
+    width: 100%;
 }
 
 .doctor-card-record__container {
@@ -4267,6 +4272,10 @@ ul.list::-webkit-scrollbar {
     display: none;
 }
 
+.specialisations__item.is-active {
+    border-bottom: 2px solid #00000019;
+}
+
 .specialisations__services {
     max-width: 800px;
     width: 100%;
@@ -4644,6 +4653,8 @@ ul.list::-webkit-scrollbar {
     .parking, .pay, .child {
         padding: 0 6px;
     }
+
+
 }
 
 @media (max-width: 1100px) {
@@ -4685,10 +4696,6 @@ ul.list::-webkit-scrollbar {
     .user__content {
         max-width: 600px;
         width: 100%;
-    }
-
-    .clinic-card__body-right {
-        max-height: 125px;
     }
 }
 
