--- a/css/mobile-styles.css
+++ b/css/mobile-styles.css
@@ -1114,7 +1114,7 @@ html.no-scroll body {
     bottom: 32px;
     right: 290px;
     position: absolute;
-    z-index: 0;
+    z-index: 2;
 }
 
 .clinic-additional ul:after {
@@ -1125,7 +1125,7 @@ html.no-scroll body {
     bottom: 32px;
     right: -1px;
     position: absolute;
-    z-index: 0;
+    z-index: 2;
 }
 
 .clinic-additional li {
@@ -1799,6 +1799,60 @@ html.no-scroll body {
     height: 156px;
 }
 
+.license-container {
+    position: relative;
+    margin: 30px 0;
+}
+
+.license-container:after {
+    content: "";
+    background: linear-gradient(270deg, #ffffff, transparent);
+    top: 2px;
+    left: 272px;
+    bottom: 32px;
+    right: -1px;
+    position: absolute;
+    z-index: 2;
+}
+
+.license-container:before {
+    content: "";
+    background: linear-gradient(90deg, #ffffff, transparent);
+    top: 1px;
+    left: -2px;
+    bottom: 32px;
+    right: 272px;
+    position: absolute;
+    z-index: 2;
+}
+
+.photo-clinic__container {
+    position: relative;
+    margin: 30px 0;
+}
+
+.photo-clinic__container:after {
+    content: "";
+    background: linear-gradient(270deg, #ffffff, transparent);
+    top: 0;
+    left: 272px;
+    bottom: 32px;
+    right: -1px;
+    position: absolute;
+    z-index: 2;
+}
+
+.photo-clinic__container:before {
+    content: "";
+    background: linear-gradient(90deg, #ffffff, transparent);
+    top: 0;
+    left: -2px;
+    bottom: 32px;
+    right: 272px;
+    position: absolute;
+    z-index: 2;
+}
+
 .photo-clinic__container img {
     width: 204px;
     height: 149px;
@@ -1813,7 +1867,7 @@ html.no-scroll body {
     text-align: center;
 }
 
-.photo-clinic__container, .license-container, .video-clinic__container {
+.video-clinic__container {
     margin: 30px 0;
 }
 
