--- a/css/mobile-styles.css
+++ b/css/mobile-styles.css
@@ -126,7 +126,7 @@ html.no-scroll body {
 }
 
 .open-clinic-map {
-    box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.25);
+    box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.25);
     position: fixed;
     top: 100px;
     z-index: 10;
@@ -142,7 +142,7 @@ html.no-scroll body {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    padding: 35px 15px 0;
+    padding: 25px 15px 0;
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
@@ -3813,6 +3813,7 @@ html.no-scroll body {
     display: flex;
     flex-direction: column;
     padding: 20px;
+    margin-bottom: 55px;
 }
 
 .linked-footer li {
