--- a/css/styles.css
+++ b/css/styles.css
@@ -955,7 +955,7 @@ body {
     align-items: center;
 }
 
-.doctor-card__record-clinic-other {
+.doctor-card__record-clinic-static {
     border-radius: 4px;
     background: rgba(81, 111, 166, 0.29);
     max-width: 381px;
@@ -963,6 +963,19 @@ body {
     margin: 5px 0 8px;
     font-weight: 500;
     padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.doctor-card__record-clinic-other {
+    border-radius: 4px;
+    background: rgba(81, 111, 166, 0.29);
+    max-width: 381px;
+    width: 100%;
+    margin: 5px 0 8px;
+    font-weight: 500;
+    padding: 0 10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -1007,7 +1020,6 @@ body {
     position: relative;
     display: inline-block;
     width: 100%;
-    padding: 5px 0;
 }
 
 .reverse-arrow img {
@@ -2645,7 +2657,7 @@ body {
     background: rgba(205, 189, 47, 0.29);
     color: #000;
     font-size: 16px;
-    padding: 2px;
+    padding: 2px 10px;
     margin: 5px 0;
     width: max-content;
 }
@@ -2655,7 +2667,7 @@ body {
     background: rgba(102, 189, 122, 0.40);
     color: #000;
     font-size: 16px;
-    padding: 2px;
+    padding: 2px 10px;
     margin: 5px 0;
     width: max-content;
 }
@@ -2859,6 +2871,10 @@ body {
     margin-bottom: 15px;
 }
 
+.doctor-card__geo-disabled {
+    margin-bottom: 15px;
+}
+
 .doctor-card__geo-disabled p {
     color: rgba(0, 0, 0, 0.80);
     font-size: 16px;
@@ -2884,6 +2900,10 @@ body {
     align-items: center;
     color: rgba(0, 0, 0, 0.70);
     font-size: 12px;
+}
+
+.doctor-card__clinics-phone {
+    padding: 0 10px;
 }
 
 .choose-clinic {
