--- a/css/mobile-styles.css
+++ b/css/mobile-styles.css
@@ -3200,8 +3200,27 @@ html.no-scroll body {
     flex-wrap: wrap;
 }
 
-.radio__label {
-    margin: 7px;
+.schedule__time-wrapper {
+    background: rgba(0, 0, 0, 0)
+}
+
+.schedule__time-container {
+    margin-top: 1rem;
+    margin-bottom: 1.5rem;
+    opacity: 0;
+    transition: opacity .3s
+}
+
+.schedule__time-container_active {
+    opacity: 1
+}
+
+.schedule__item {
+    display: none
+}
+
+.schedule__time-btn {
+    margin: 6px;
     border-radius: 6px;
     background: #516FA6;
     color: #FFF;
@@ -3222,6 +3241,32 @@ html.no-scroll body {
     -webkit-transition: all 0.3s ease-in-out 0s;
     -o-transition: all 0.3s ease-in-out 0s;
     transition: all 0.3s ease-in-out 0s;
+}
+
+.schedule__time-btn_add {
+    text-align: center;
+    cursor: pointer;
+    text-decoration: underline;
+    color: rgba(0, 0, 0, 0.50);
+    font-size: 14px;
+    max-width: 65px;
+    width: 100%;
+}
+
+.schedule__time-btn_add_open i {
+    transform: rotate(180deg)
+}
+
+.schedule__item_active {
+    display: flex
+}
+
+.arrow-down-blue-ico {
+    background: url("/images/bot-page.png") center center/contain no-repeat;
+    width: 1.125rem;
+    height: 1.125rem;
+    display: inline-block;
+    flex-shrink: 0
 }
 
 .radio__input {
@@ -4262,6 +4307,51 @@ html.no-scroll body {
     z-index: 100;
 }
 
+.show-close-form .overlay {
+    display: block;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: 0.7;
+    z-index: 100;
+}
+
+.show-close-form .pp-close-hint {
+    display: block;
+    position: fixed;
+    top: calc(17% - 90px);
+    left: calc(31% - 89px);
+    padding: 30px;
+    z-index: 200;
+    width: 330px;
+    height: 360px;
+    background: #fff;
+    border-radius: 4px;
+}
+
+.pp-close-hint .close-form {
+    position: absolute;
+    top: -35px;
+    right: -30px;
+    font-size: 21px;
+    cursor: pointer;
+}
+
+.btns-row .button {
+    margin: 10px!important;
+}
+
+.btn-emo {
+    background: #ccc!important;
+}
+
+.btns-row {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
 .doctor-in-clinic {
     display: flex;
     align-items: center;
@@ -4272,7 +4362,7 @@ html.no-scroll body {
     display: block;
     position: fixed;
     height: 700px;
-    top: calc(22% - 90px);
+    top: calc(16% - 90px);
     left: calc(25% - 80px);
     padding: 30px;
     z-index: 200;
