--- a/css/styles.css
+++ b/css/styles.css
@@ -924,6 +924,10 @@ body {
     font-weight: 600;
 }
 
+.schedule-container {
+    padding: 0 .5rem;
+}
+
 .clinic-card__footer-clinic-schedule {
     color: rgba(0, 0, 0, 0.70);
     font-size: 13px;
@@ -4403,6 +4407,8 @@ ul.list::-webkit-scrollbar {
     text-decoration: underline;
     color: rgba(0, 0, 0, 0.50);
     font-size: 14px;
+    max-width: 65px;
+    width: 100%;
 }
 
 .schedule__time-btn_add_open i {
@@ -5484,8 +5490,8 @@ ul.list::-webkit-scrollbar {
 .show-close-form .pp-close-hint {
     display: block;
     position: fixed;
-    left: 269.5px;
-    top: 100px;
+    left: calc(50% - 250px);
+    top: calc(22% - 90px);
     padding: 30px;
     z-index: 200;
     width: 650px;
