--- a/css/mobile-styles.css
+++ b/css/mobile-styles.css
@@ -80,7 +80,7 @@ html.no-scroll body {
     position: fixed;
     top: 0;
     background: #FFF;
-    z-index: 200;
+    z-index: 202;
     height: 100%;
 }
 
@@ -106,7 +106,7 @@ html.no-scroll body {
 }
 
 .open-window-search {
-    z-index: 5;
+    z-index: 202;
     position: absolute;
     width: 100%;
     padding: 0 0 28px;
@@ -129,7 +129,7 @@ html.no-scroll body {
     box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.25);
     position: fixed;
     top: 100px;
-    z-index: 10;
+    z-index: 202;
     left: 25px;
 }
 
@@ -4288,6 +4288,36 @@ html.no-scroll body {
 
 
 .show-record-form .overlay {
+    display: block;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: 0.7;
+    z-index: 200;
+}
+
+.top-menu-visible .overlay {
+    display: block;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: 0.7;
+    z-index: 200;
+}
+
+.content-raltive .overlay {
+    display: block;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: 0.7;
+    z-index: 200;
+}
+
+.blackout .overlay {
     display: block;
     position: fixed;
     width: 100%;
