--- a/css/styles.css
+++ b/css/styles.css
@@ -476,6 +476,7 @@ body {
     border-radius: 13px;
     background: #FFF;
     box-shadow: 1px 5px 15px -8px rgba(0, 0, 0, 0.25);
+    min-height: 215px;
 }
 
 .popular-doctor__head {
@@ -655,6 +656,7 @@ body {
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-between;
+    min-height: 245px;
 }
 
 .oher-clinics__clinic-info {
@@ -4023,6 +4025,7 @@ ul.list::-webkit-scrollbar {
     align-items: center;
     font-size: 18px;
     font-weight: 600;
+    margin-bottom: 1rem;
 }
 
 
